# TernGEMM

./: README.md
arm/: CMakeLists.txt  main.cpp  main_1x128.cpp  main_2x64.cpp  main_4x32.cpp
arm/kernel/: avx.cpp  avx_1x128.cpp  avx_2x64.cpp  avx_3bit.cpp  avx_4bit.cpp  avx_4x32.cpp  avx_5bit.cpp  avx_6bit.cpp  baseline.cpp  kernel.h
intel/: CMakeLists.txt  main.cpp  main_1x128.cpp  main_1x96.cpp  main_2x64.cpp  main_4x32.cpp
intel/kernel/: baseline.cpp  common_1x128.h  common_1x96.h  common_2x64.h  common_4x32.h  kernel.h  packing.cpp  postprocess.cpp
intel/kernel/bit3/: avx_b3_1x96.cpp
intel/kernel/bit4/: avx_b4_1x128.cpp  avx_b4_1x128_n.cpp  avx_b4_1x96.cpp  avx_b4_1x96_n.cpp  avx_b4_2x64.cpp  avx_b4_2x64_n.cpp  avx_b4_4x32.cpp  avx_b4_4x32_n.cpp
intel/kernel/bit4/New Folder/: avx_b4_1x128.cpp  avx_b4_1x128_n.cpp  avx_b4_1x96.cpp  avx_b4_1x96_n.cpp  avx_b4_2x64.cpp  avx_b4_2x64_n.cpp  avx_b4_4x32.cpp  avx_b4_4x32_n.cpp
intel/kernel/bit5/: avx_b5_1x96.cpp
intel/kernel/bit6/: avx_b6_1x96.cpp
